--- a/block-BJaaer/code/style.css
+++ b/block-BJaaer/code/style.css
@@ -42,6 +42,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: linear-gradient(to right, #7f53ac 0, #657ced 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 * {
   box-sizing: border-box;
@@ -67,7 +70,7 @@ select {
 }
 
 .container {
-  max-width: 400px;
+  min-width: 400px;
   margin: 2rem auto;
   background: white;
   padding: 1rem;
@@ -90,4 +93,28 @@ input[type='text'] {
 }
 .terms {
   display: inline-block;
+}
+.modal-container{
+  width: 400px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 20px;
+  position: relative;
+  font-weight: 800;
+}
+.modal-container h3
+{
+  font-size: 20px;
+  font-weight: 600;
+}
+.modal-container p{
+  margin:  10px 0;
+  font-weight: 500;
+}
+.modal-container .close-btn{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: grey;
 }
