--- a/block-BJaaer/code/style.css
+++ b/block-BJaaer/code/style.css
@@ -45,6 +45,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 * {
   box-sizing: border-box;
@@ -94,14 +95,28 @@ input[type='text'] {
 .terms {
   display: inline-block;
 }
+.modal-wrapper{
+  position: absolute;
+  top: 0px;
+  left: 0;
+  right: 0px;
+  height: 200vh;
+ background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.6)) ;
+ display:none;
+}
 .modal-container{
+  position: relative;
   width: 400px;
   height: 400px;
   background-color: #fff;
   border-radius: 20px;
   padding: 20px;
-  position: relative;
+  top: 20%;
+  left: 30%;
+  transform: translate(-10% , -40%);
+  backdrop-filter: blur(50px);
   font-weight: 800;
+  
 }
 .modal-container h3
 {
