--- a/block-BJaaer/code/style.css
+++ b/block-BJaaer/code/style.css
@@ -103,17 +103,18 @@ input[type='text'] {
   height: 200vh;
  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.6)) ;
  display:none;
+ display: flex;
+ justify-content: center;
+ align-items: flex-start;
 }
 .modal-container{
   position: relative;
   width: 400px;
   height: 400px;
+  margin: 200px auto;
   background-color: #fff;
   border-radius: 20px;
   padding: 20px;
-  top: 20%;
-  left: 30%;
-  transform: translate(-10% , -40%);
   backdrop-filter: blur(50px);
   font-weight: 800;
   
