--- a/block-BJaaes/code/style.css
+++ b/block-BJaaes/code/style.css
@@ -1,37 +1,64 @@
 /* CSS Reset */
-
-html {
+*{
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
-  font-size: 16px;
 }
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+html{
+  font-size: 62.5%;
 }
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
+body{
+  font-family: 'Poppins',sans-serif;
+  font-size: 1.6rem;
+  background-color: #1877f2;
 }
-
-ol,
-ul {
-  list-style: none;
+::placeholder{
+  font-family: 'Poppins',sans-serif;
+ color: grey;
 }
-
-img {
-  max-width: 100%;
+section{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+form{
+  width: 35rem;
   height: auto;
+  background-color:#fff;
+  padding: 2rem ;
+  border-radius: .6rem;
+  box-shadow: inset 2px 2px 8px rgba(0,0,0,0.3),
+  -2px -2px 8px rgba(0,0,0,0.1);
+}
+form label{
+  display: block;
+  margin:.5rem  0 ;
+
+}
+form input {
+  width: 100%;
+  padding: 1rem ;
+  outline: none;
+  border-color:.1rem solid rgba(0,0,0,0.1); 
+  border-radius: .2rem;
+  font-size: 1.3rem;
+}
+form small{
+  margin :1.5rem  0 ;
+  color: #F32013;
+  font-size: 1.2rem;
+  
+}
+.submit{
+  margin:  2rem  0 ;
+  width: 100%;
+  padding: .8rem 1.6rem;
+  border-radius: .2rem;
+  border: none;
+  outline: none;
+  font-family: "Poppins", sans-serif;
+  background-color: #1877f2;
+  color: #fff;
+  font-weight: 600;
 }
