--- a/block-BJaaet/code/style.css
+++ b/block-BJaaet/code/style.css
@@ -17,10 +17,45 @@ section{
     align-items: center;
 }
 .wrapper{
-    background-color: #789AB9;
+    background:linear-gradient(#732eca,#fe50a0);
+    width: 45rem;
+    border-radius: .8rem;
+    padding: 2rem;
+}
+.wrapper h1{
+    color: white;
+    text-align: center;
+    margin: 0 0 1rem 0;
+    font-size: 2.5rem;
+}
+.wrapper ul{
+    display: flex;
+    flex-flow: column wrap;
+  
+}
+label{
+    font-size: 2.5rem;
+    color: #fff;
+
 }
 li{
     display: flex;
+    align-items: center;
     margin: 1.5rem 0 ;
     list-style: none;
+    position: relative;
+}
+li input {
+    flex:  0 1 10%;
+}
+
+input{
+    width: 100%;
+    padding:.5rem;
+  
+}
+span{
+    position: absolute;
+    right: 2rem;
+    font-size: 3rem;
 }
