--- a/block-BJaaev/code/style.css
+++ b/block-BJaaev/code/style.css
@@ -18,7 +18,7 @@ section{
 }
 .todo-container{
     margin: 12rem auto;
-    max-width: 40rem;
+    max-width: 50rem;
     background: #fff;
     border-radius: .5rem;
     padding: 2.5rem;
@@ -89,9 +89,16 @@ input:checked{
     border: 0px;
     margin: 0 1rem;
     padding: .3rem .6rem ;
+    border-radius: .5rem;
     outline: none;
-    background: transparent;
+    
+    
 }
 .filter-todo button:hover{
     color: #8402FF;
+}
+
+.selected {
+    background: #8402FF;
+    color: #fff;
 }
